[gd_scene load_steps=2 format=3 uid="uid://v60hup17t1e8"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_3ych5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3ych5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Start"

[node name="Gallery" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Gallery"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Gallery" to="." method="_on_gallery_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
